Fix the Scrollbar Component to appear native horizontal scrollbars in chrome and Firefox

--- a/packages/theme-chalk/src/scrollbar.scss
+++ b/packages/theme-chalk/src/scrollbar.scss
@@ -18,6 +18,11 @@
     overflow: scroll;
     height: 100%;
 
+    &::-webkit-scrollbar {
+      width: 0;
+      height: 0;
+    }
+
     @include m(hidden-default) {
       &::-webkit-scrollbar {
         width: 0;
